# litellm-mcp-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: build-and-push.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  secret.yaml  service-metrics.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
dashboard/: grafana.json
docs/: teams.md  users.md
docs/fastMCP-docs/: client-logging.md
kube/: deployment.yaml  rbac.yaml  secret.yaml.example  service.yaml  servicemonitor.yaml
src/litellm_mcp_server/: config.py  helpers.py  http_client.py  mcp_instance.py  mcp_server.py
src/litellm_mcp_server/metrics/: metrics.py
src/litellm_mcp_server/tools/: __init__.py  keys.py  teams.py  users.py
